--- a/XPOS/XPOS_FE/Views/Shared/_SideBar.cshtml
+++ b/XPOS/XPOS_FE/Views/Shared/_SideBar.cshtml
@@ -80,9 +80,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+                            <a asp-action="" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Top Navigation + Sidebar</p>
+                                <p>Order History</p>
                             </a>
                         </li>
                         <li class="nav-item">
