--- a/XPOS/XPOS_FE/Views/Order/OrderHistory.cshtml
+++ b/XPOS/XPOS_FE/Views/Order/OrderHistory.cshtml
@@ -1,4 +1,18 @@
 ﻿@using XPOS_ViewModels
 @model List<VMOrderHeader>
 
+<div class="card">
+    <div class="card-header">
+        <div class="card-title">History Order</div>
+    </div>
+    <div class="card-body">
+        <table>
+            <thead>
 
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
+</div>
