--- a/XPOS/XPOS_FE/Views/Shared/_SideBar.cshtml
+++ b/XPOS/XPOS_FE/Views/Shared/_SideBar.cshtml
@@ -80,7 +80,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-action="GetAllOrder" asp-controller="Order" class="nav-link">
+                            <a asp-action="OrderHistory" asp-controller="Order" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Order History</p>
                             </a>
