--- a/XPOS/XPOS_FE/Views/Order/CheckOut.cshtml
+++ b/XPOS/XPOS_FE/Views/Order/CheckOut.cshtml
@@ -1,18 +1,7 @@
 ﻿@using XPOS_ViewModels
 @model VMOrderHeader
 
-<div class="card            <a href="#" class="nav-link">
-    <i class="nav-icon far fa-circle text-warning"></i>
-    <p>Warning</p>
-    </a>
-    </li>
-    <li class="nav-item">
-        <a href="#" class="nav-link">
-            <i class="nav-icon far fa-circle text-info"></i>
-            <p>Informational</p>
-        </a>
-    </li>
-    </ul>">
+<div class="card>
     <div class="card-body p-0">
         <div class="row">
             <table class="table table-sm">
