--- a/XPOS/XPOS_FE/Views/Shared/_SideBar.cshtml
+++ b/XPOS/XPOS_FE/Views/Shared/_SideBar.cshtml
@@ -1,9 +1,11 @@
 ﻿@using XPOS_FE.Services
+@using Microsoft.AspNetCore.Http;
 @inject OrderService order_service
 
 @{
     int IdUser = 1;
     int count = await order_service.TotalHistory(IdUser);
+    string NameCustomer = Context.Session.GetString("NameCustomer") ?? "noname";
 }
 
   <!-- Main Sidebar Container -->
@@ -22,7 +24,7 @@
                 <img src="~/adminlte/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a class="d-block">@Context.Session.GetString("NameCustomer")</a>
             </div>
         </div>
 
