--- a/XPOS/XPOS_FE/Views/Home/Index.cshtml
+++ b/XPOS/XPOS_FE/Views/Home/Index.cshtml
@@ -1,8 +1,47 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http;
+
+
+@{
+    int IdUser = Context.Session.GetInt32("IdUser") ?? 0;
+    string NameCustomer = Context.Session.GetString("NameCustomer") ?? "noname";
+}
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+    <h1 class="display-4"> Welcome, @Context.Session.GetString("NameCustomer")</h1>
+    <div class="row">
+        <div class="col-lg-6">
+
+            <div class="small-box bg-info">
+                <div class="inner">
+                    <h3>@ViewBag.TotalHistory</h3>
+                    <p>Total Order</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-bag"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+        <div class="col-lg-6">
+
+            <div class="small-box bg-success">
+                <div class="inner">
+                    <h3>@ViewBag.SumTotalHistory</h3>
+                    <p>Total Transaction In Year</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-stats-bars"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+    </div>
+
+
+
 </div>
