--- a/XPOS/XPOS_FE/Views/Shared/_Header.cshtml
+++ b/XPOS/XPOS_FE/Views/Shared/_Header.cshtml
@@ -2,10 +2,15 @@
 
 @{
     int IdUser = Context.Session.GetInt32("IdUser") ?? 0;
+    string ClassLogin = "";
+    @if(IdUser != 0)
+    {
+        ClassLogin = "main-header";
+    }
 }
 
 <!-- Navbar -->
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav class="@ClassLogin navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
