--- a/XPOS/XPOS_FE/Views/Home/Index.cshtml
+++ b/XPOS/XPOS_FE/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 
             <div class="small-box bg-success">
                 <div class="inner">
-                    <h3>@ViewBag.SumTotalHistory</h3>
+                    <h3>@ViewBag.SumTotalHistory.ToString("#,##0")</h3>
                     <p>Total Transaction In Year</p>
                 </div>
                 <div class="icon">
